--- a/src/widget/customcolumns/CustomColumnsWidget.html
+++ b/src/widget/customcolumns/CustomColumnsWidget.html
@@ -1,22 +1,27 @@
-<div ms-if="show" style="margin-top:-20px;">
-    <div ms-if="showAllCheck" class="row" style="width:600px;height:30px;">
-        <div class="col-md-1" style="padding:7px;">
-            <button class="btn btn-info btn-circle" type="button" ms-click="allCheck(vid, true)"><i class="fa fa-check"></i>
-            </button>
-        </div>
-        <div class="col-md-1" style="padding:7px;">
-            <button class="btn btn-warning btn-circle" type="button" ms-click="allCheck(vid, false)"><i class="fa fa-times"></i>
-            </button>
-        </div>
+<div ms-if="show" class="custom_topPadding">
+    <div ms-if="showAllCheck" class="row customCol_allCheckCon">
+        <!--<div class="col-md-1" style="padding:7px;">-->
+            <!--<button class="btn btn-info btn-circle" type="button" ms-click="allCheck(vid, true)"><i class="fa fa-check"></i>-->
+            <!--</button>-->
+        <!--</div>-->
+        <!--<div class="col-md-1" style="padding:7px;">-->
+            <!--<button class="btn btn-warning btn-circle" type="button" ms-click="allCheck(vid, false)"><i class="fa fa-times"></i>-->
+            <!--</button>-->
+        <!--</div>-->
+        <label ms-click="allCheck(vid, this)" class="customCol_noMargin customCol_noPadding padding7">
+            <div class="form-horizontal ampS-form-xs">
+                <div class="icheckbox_square-green" ms-class-checked="allChecked">
+                </div>
+            </div>
+        </label>
     </div>
-    <div class="row" style="width:600px;height:300px;overflow: auto;">
-        <div class="form-widget-container col-md-6 divbordertop divborderleft" ms-repeat-col="items" style="padding:7px;"
+    <div class="row" class="customCol_row">
+        <div class="form-widget-container col-md-6 divbordertop divborderleft customCol_con" ms-repeat-col="items"
                 ms-class-divborderright="$index%2==1" ms-class-oddback="$index%4==0||$index%4==1"
                 ms-class-divborderbottom="$index>(items.length-3)">
-            <label ms-click="itemCheck(vid,col)" style="margin-bottom:0">
+            <label ms-click="itemCheck(vid,col)" class="customCol_noMargin">
                 <div class="form-horizontal ampS-form-xs">
-                    <div class="ampS-line-b" style="font-family: 'Microsoft YaHei', 'open sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-                    font-size: 12px;color: #676a6c;font-weight: 400;">
+                    <div class="ampS-line-b customCol_font">
                         <div class="icheckbox_square-green" ms-class-checked="col.checked" ms-class-disabled="status=='disabled'"
                              style="position: relative;">
                         </div>
@@ -25,8 +30,8 @@
                 </div>
             </label>
         </div>
-        <div ms-if="items.length%2>0" class="form-widget-container col-md-6 divborderleft divborderright divborderbottom"
-             ms-class-oddback="items.length%4==1" style="padding:7px;height:34px;">
+        <div ms-if="items.length%2>0" class="form-widget-container col-md-6 divborderleft divborderright divborderbottom customCol_fixCol"
+             ms-class-oddback="items.length%4==1">
         </div>
     </div>
 </div>
