--- a/src/widget/simple/simpleGrid.demo.html
+++ b/src/widget/simple/simpleGrid.demo.html
@@ -77,7 +77,8 @@
             usePager:true,
             width:"1000px",
             showPageBeforeAfterCount:4,
-            defaultAlign:"left",
+            defaultAlign:"center",
+            //defaultTitleAlign:"center",
             canSort:true,
             canSortOpColumn:true,
             multiSort:false,//复合排序
@@ -97,7 +98,7 @@
                 {title:"入学时间",dataField:"rxDate",xtype:"datepicker",width:"380px",
                     titleAlign:"center",textAlign:"center"},
                 {title:"是否党员",dataField:"isParty",xtype:"switch",showDisplay:true,width:"380px",
-                    titleAlign:"center",textAlign:"center",isOpColumn:true},
+                    titleAlign:"center",textAlign:"center"},
                 {title:"备注",dataField:"notes",hidden:true,sortDisabled:true,width:"380px",
                     titleAlign:"center"},
                 {title:"姓名",dataField:"name",orderType:"asc",disabledEdit:false,width:"380px",
